# graphics

./: .bazelrc  .flake8  .gitignore  .gitmodules  .pylintrc  .travis.yml  BUILD  BUILD.tpl  CONTRIBUTING.md  MANIFEST.in  README.md  WORKSPACE  another_simple_test_change.txt  build_pip_pkg.sh  build_rasterizer.sh  pytest.ini  requirements.txt  requirements.unix  setup.py  simple_test_change.txt  tf_configure.bzl  tox.ini
.github/workflows/: build.yml  pythonapp.yml  tfg-main-pypi.yml  tfg-nightly-pypi.yml  tfg-nigthly-pypi.yml  tfg-test-pypi.yml
BlenderToolbox/: README.md
BlenderToolbox/cycles/: demo_amber.py  demo_boundaryLoop.py  demo_carPaint.py  demo_ceramic.py  demo_chrome.py  demo_circCamera.py  demo_composite.py  demo_crackedCeramic.py  demo_createArrow.py  demo_drawLines.py  demo_edge.py  demo_edgeNormals.py  demo_edgeSubset.py  demo_edgeWire.py  demo_facePoints.py  demo_glass.py  demo_isoline.py  demo_linkedDuplicate.py  demo_matcap.py  demo_monotone.py  demo_muscle.py  demo_orthocamera.py  demo_orthocameraFromMat.py  demo_pointCloud.py  demo_poop.py  demo_readImage.py  demo_singleColor.py  demo_stone.py  demo_texture.py  (+16 more)
benchmarks/: graph_convolution_benchmark.py
submodules/: README.md
tensorflow_graphics/: BUILD  __init__.py  build_docs.py  build_docs.sh  opensource_only.files  pytest.ini  version.py
tensorflow_graphics/physics/: CMakeLists.txt  README.md  arm.py  memo.py  mpm3d.py  simulation.py  test_tf_speed.py  tests_2d.py  tests_3d.py  time_integration.py  vector_math.py
tensorflow_graphics/physics/demos/: accuracy_collision_3d.py  arm_3d_v3.py  basketball.py  bridge.py  collision_2d.py  collision_3d.py  collision_grad_2d.py  collision_grad_3d.py  collision_mass.py  crawler_3d.py  export.py  finger_plot.py  model.py  multireach.py  rolling.py  rolling_boundary.py  rotating_muscle.py  test_finger.py  test_walker.py  visualize_training_curve.py  walker_2d.py  walker_3d.py
tensorflow_graphics/physics/demos/finger/: __init__.py  finger_env.py  finger_sim.py
tensorflow_graphics/physics/demos/walker/: __init__.py  walker_env.py  walker_sim.py
tensorflow_graphics/physics/docs/: API.rst  conf.py  index.rst  installation.rst  make.bat
tensorflow_graphics/physics/src/: backward.cu  config.h  forward.cu  g2pop.cc  kernels.h  linalg.h  misc.cu  mpmgradop.cc  mpmop.cc  p2gop.cc  simulator.cpp  state.cuh  state_base.h  svd.cuh
tensorflow_graphics/projects/DeepSDF/: CMakeLists.txt  LICENSE  README.md  evaluate.py  generate_training_meshes.py  plot_log.py  preprocess_data.py  reconstruct.py  show_interior_samples.py  train_deep_sdf.py
tensorflow_graphics/projects/DeepSDF/deep_sdf/: __init__.py  data.py  mesh.py  utils.py  workspace.py
tensorflow_graphics/projects/DeepSDF/deep_sdf/metrics/: chamfer.py
tensorflow_graphics/projects/DeepSDF/examples/chairs/: specs.json
tensorflow_graphics/projects/DeepSDF/examples/lamps/: specs.json
tensorflow_graphics/projects/DeepSDF/examples/planes/: specs.json
tensorflow_graphics/projects/DeepSDF/examples/sofas/: specs.json
tensorflow_graphics/projects/DeepSDF/examples/splits/: sv2_chairs_test.json  sv2_chairs_train.json  sv2_lamps_test.json  sv2_lamps_train.json  sv2_planes_test.json  sv2_planes_train.json  sv2_sofas_test.json  sv2_sofas_train.json  sv2_tables_test.json  sv2_tables_train.json
tensorflow_graphics/projects/DeepSDF/examples/tables/: specs.json
tensorflow_graphics/projects/DeepSDF/networks/: deep_sdf_decoder.py
tensorflow_graphics/projects/DeepSDF/src/: PreprocessMesh.cpp  SampleVisibleMeshSurface.cpp  ShaderProgram.cpp  Utils.cpp  Utils.h
workflows/: pythonapp.yml
(+1201 files in other folders)
